--- a/src/dynamic_fleet_management/package.xml
+++ b/src/dynamic_fleet_management/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>my_controller</name>
+  <name>dynamic_fleet_management</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="tchang@ideapad3.com">tchang</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="vikramsetty169@gmail.com">Vikram Setty</maintainer>
+  <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>rclcpp</depend>
