--- a/src/dynamic_fleet_management/CMakeLists.txt
+++ b/src/dynamic_fleet_management/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(dynamic_fleet management)
+project(dynamic_fleet_management)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
