fix imports, add tests, add CI

--- a/src/dynamic_fleet_management/CMakeLists.txt
+++ b/src/dynamic_fleet_management/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(Doxygen REQUIRED)
 find_package(swarm_control REQUIRED) # add my_model
 
@@ -32,7 +33,7 @@ if(BUILD_TESTING)
     $<INSTALL_INTERFACE:include>
   )
   ament_target_dependencies(${PROJECT_NAME}_test
-    rclcpp std_msgs
+    rclcpp geometry_msgs
   )
   target_link_libraries(${PROJECT_NAME}_test swarm_control)
 endif()
@@ -87,31 +88,22 @@ doxygen_add_docs(docs           # target name
   )
 
 # Add executables:
-#add_executable(talker
-#  src/publisher_member_function.cpp)
-#add_executable(listener
-#  src/subscriber_member_function.cpp)
+add_executable(robot_commander
+ src/main.cpp)
 
 # Add executable dependencis:
-#ament_target_dependencies(talker
-#  rclcpp std_msgs)
-#target_link_libraries(talker 
-#  swarm_control)
+ament_target_dependencies(robot_commander rclcpp geometry_msgs)
+target_link_libraries(robot_commander swarm_control)
 
-#ament_target_dependencies(listener
-#  rclcpp std_msgs)
-#target_link_libraries(listener
-#  swarm_control)
 
 ###################################
 # Installation
 ###################################
 
 # Install executables:
-#install(TARGETS
-#  talker
-#  listener
-#  DESTINATION lib/${PROJECT_NAME})
+install(TARGETS
+ robot_commander
+ DESTINATION lib/${PROJECT_NAME})
 
 # install launch files
 install(DIRECTORY
