--- a/.github/workflows/run-unit-test-and-upload-codecov.yml
+++ b/.github/workflows/run-unit-test-and-upload-codecov.yml
@@ -34,11 +34,11 @@ name: Run Unit Test and Upload Coverage Report
 on:
   # Triggered whenever push to main 
   push:
-    branches: [ "actualization" ]
+    branches: [ "main" ]
 
   # Triggered whenever a pull request is created on main
   pull_request:
-    branches: [ "actualization" ]
+    branches: [ "main" ]
     types: [opened]
 
   # Allow manual trigger
