--- a/src/dynamic_fleet_management/package.xml
+++ b/src/dynamic_fleet_management/package.xml
@@ -9,10 +9,15 @@
   <license>MIT License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
   <depend>swarm_control</depend>
   <depend>geometry_msgs</depend>
+  <depend>gazebo_ros_pkgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>rosbag2_cpp</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
