--- a/src/swarm_control/libs/RVO2/src/CMakeLists.txt
+++ b/src/swarm_control/libs/RVO2/src/CMakeLists.txt
@@ -54,5 +54,5 @@ endif()
 install(FILES ${RVO_HEADERS} DESTINATION include)
 # install(TARGETS RVO DESTINATION lib)
 install(TARGETS RVO EXPORT swarm_control-export
-DESTINATION lib/${PROJECT_NAME}
+DESTINATION lib
 )
