--- a/src/dynamic_fleet_management/package.xml
+++ b/src/dynamic_fleet_management/package.xml
@@ -13,6 +13,9 @@
   <depend>std_msgs</depend>
   <depend>swarm_control</depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
